[metadata]
name = kle_scraper
version = attr: kle_scraper.__version__
author = Hajime Nakazato
author-email = hajime@kaoriha.org
home-page = https://github.com/hajimen/kle_scraper
description = kle_scraper is a Python library for scraping the key top images of keyboard-layout-editor.com (KLE).
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
platform = any
keywords =
    keyboard-layout-editor.com
    KLE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Bug Tracker = https://github.com/hajimen/kle_scraper/issues
    Changelog = https://github.com/hajimen/kle_scraper/blob/master/CHANGELOG.md

[options]
python_requires = >= 3.7
packages = kle_scraper
test_suite = tests
setup_requires =
    setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
    cefpython3 >= 66.1
    Pillow >= 8.2.0
    pykle-serial >= 0.0.2
# tests_require =
#     {tests_require}
